Simplify and fix tests.